docs(swagger): add auth routes docs
