# cmd/api/auth.go
@@ -50,6 +50,15 @@ func (app *application) AuthCallbackFunction(w http.ResponseWriter, r *http.Requ
 	http.Redirect(w, r, "https://bookshelf.svenrisse.com/v1/healthcheck", http.StatusTemporaryRedirect)
 }
 
+// Auth godoc
+//
+//	@Summary		Let a User Logout with given Provider
+//	@Tags			  users
+//	@Accept			json
+//	@Produce		json
+//	@Param			provider	path		string	true	"Discord / Github / Google"
+//	@Success		302
+//	@Router			/v1/auth/{provider}/logout [get]
 func (app *application) AuthLogout(w http.ResponseWriter, r *http.Request) {
 	params := httprouter.ParamsFromContext(r.Context())
 	provider := params.ByName("provider")
@@ -61,6 +70,15 @@ func (app *application) AuthLogout(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(http.StatusTemporaryRedirect)
 }
 
+// Auth godoc
+//
+//	@Summary		Let a User Login with given Provider
+//	@Tags			  users
+//	@Accept			json
+//	@Produce		json
+//	@Param			provider	path		string	true	"Discord / Github / Google"
+//	@Success		302
+//	@Router			/v1/auth/{provider} [get]
 func (app *application) Auth(w http.ResponseWriter, r *http.Request) {
 	params := httprouter.ParamsFromContext(r.Context())
 	provider := params.ByName("provider")
